--- a/client/src/App.css
+++ b/client/src/App.css
@@ -57,6 +57,19 @@ input[type="text"] {
   border-radius: 4px;
 }
 
+.time-input {
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  text-align: center;
+}
+
+.time-input:focus {
+  outline: none;
+  border-color: #007bff; /* válaszd megfelelő színt */
+}
+
 button:hover {
   background-color: #218838;
 }
@@ -64,8 +77,6 @@ button:hover {
 ul {
   list-style-type: none;
   padding: 0;
-  max-height: 300px; 
-  overflow-y: scroll;
 }
 
 li {
@@ -110,7 +121,8 @@ ul li {
   background: #eee;
   font-size: 18px;
   transition: 0.2s;
-
+  text-align: center;
+  margin-bottom: 1px;
 }
 
 ul li {
