--- a/client/src/UserComponents/guest/style/Guest.css
+++ b/client/src/UserComponents/guest/style/Guest.css
@@ -1,15 +1,6 @@
-.todo-app {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  padding: 20px;
+.title {
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.title{
-  display: flex;
 }
 
 .add-todo-container {
@@ -34,21 +25,22 @@
   flex-direction: column;
 }
 
-.time-input,
+.time-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  margin-bottom: 10px;
+  width: 120px;
+  margin-right: 10px;
+}
+
 .todo-description {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 14px;
   margin-bottom: 10px;
-}
-
-.time-input {
-  width: 120px;
-  margin-right: 10px;
-}
-
-.todo-description {
   flex: 1;
 }
 
@@ -63,13 +55,13 @@
   margin-bottom: 10px;
 }
 
-ul {
+.todo-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
 
-li {
+.todo-item {
   background-color: #fff;
   margin-bottom: 15px;
   padding: 15px;
@@ -81,27 +73,5 @@ li {
 }
 
 .completed {
-  text-decoration: line-through;
   color: #aaa;
-}
-
-.todo-app input[type="time"],
-.todo-app input[type="text"],
-.todo-app button {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 14px;
-  margin-bottom: 10px;
-}
-
-.todo-app button {
-  background-color: #5cb85c;
-  color: #fff;
-  border: none;
-  padding: 12px 24px;
-  border-radius: 5px;
-  cursor: pointer;
-  margin-left: 15px;
-  margin-bottom: 10px;
 }
